packages/glyles/glyles-1.0.0-py3-none-any.whl/glyles/grammar/GlycanParser.py
# Generated from Glycan.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GlycanParser ( Parser ):

    grammarFileName = "Glycan.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#'", "' '", "<INVALID>", "'C'", "'N'", 
                     "'O'", "'P'", "<INVALID>", "'Anhydro'", "'0d'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "','", "'-'", "'('", "')'", "'['", "']'", 
                     "'{'", "'}'", "'a'", "'ai'", "'c'", "'d'", "'e'", "'t'", 
                     "'='", "'i'", "'?'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "SAC", "CARBON", 
                      "NITROGEN", "OXYGEN", "PHOSPHOR", "FG", "ANHYDRO", 
                      "HEAD", "HEADD", "END", "COUNT", "TYPE", "RING", "NUM", 
                      "COLON", "DASH", "LPAR", "RPAR", "LBRACE", "RBRACE", 
                      "LBRACK", "RBRACK", "A", "AI", "C", "D", "E", "T", 
                      "EQ", "I", "QMARK" ]

    RULE_start = 0
    RULE_begin = 1
    RULE_branch = 2
    RULE_deriv = 3
    RULE_saci = 4
    RULE_con = 5
    RULE_add = 6
    RULE_fgi = 7
    RULE_carb = 8
    RULE_modi = 9
    RULE_qnum = 10
    RULE_typi = 11
    RULE_bridge = 12
    RULE_ct = 13

    ruleNames =  [ "start", "begin", "branch", "deriv", "saci", "con", "add", 
                   "fgi", "carb", "modi", "qnum", "typi", "bridge", "ct" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    SAC=3
    CARBON=4
    NITROGEN=5
    OXYGEN=6
    PHOSPHOR=7
    FG=8
    ANHYDRO=9
    HEAD=10
    HEADD=11
    END=12
    COUNT=13
    TYPE=14
    RING=15
    NUM=16
    COLON=17
    DASH=18
    LPAR=19
    RPAR=20
    LBRACE=21
    RBRACE=22
    LBRACK=23
    RBRACK=24
    A=25
    AI=26
    C=27
    D=28
    E=29
    T=30
    EQ=31
    I=32
    QMARK=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def begin(self):
            return self.getTypedRuleContext(GlycanParser.BeginContext,0)


        def LBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(GlycanParser.LBRACK)
            else:
                return self.getToken(GlycanParser.LBRACK, i)

        def branch(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GlycanParser.BranchContext)
            else:
                return self.getTypedRuleContext(GlycanParser.BranchContext,i)


        def RBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(GlycanParser.RBRACK)
            else:
                return self.getToken(GlycanParser.RBRACK, i)

        def getRuleIndex(self):
            return GlycanParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = GlycanParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(GlycanParser.T__0)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23:
                self.state = 29
                self.match(GlycanParser.LBRACK)
                self.state = 30
                self.branch()
                self.state = 31
                self.match(GlycanParser.RBRACK)
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.begin()
            self.state = 39
            self.match(GlycanParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BeginContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def branch(self):
            return self.getTypedRuleContext(GlycanParser.BranchContext,0)


        def deriv(self):
            return self.getTypedRuleContext(GlycanParser.DerivContext,0)


        def TYPE(self):
            return self.getToken(GlycanParser.TYPE, 0)

        def getRuleIndex(self):
            return GlycanParser.RULE_begin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBegin" ):
                listener.enterBegin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBegin" ):
                listener.exitBegin(self)




    def begin(self):

        localctx = GlycanParser.BeginContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_begin)
        try:
            self.state = 54
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.branch()
                self.state = 42
                self.deriv()
                self.state = 43
                self.match(GlycanParser.T__1)
                self.state = 44
                self.match(GlycanParser.TYPE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.branch()
                self.state = 47
                self.deriv()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 49
                self.deriv()
                self.state = 50
                self.match(GlycanParser.T__1)
                self.state = 51
                self.match(GlycanParser.TYPE)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 53
                self.deriv()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BranchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def deriv(self):
            return self.getTypedRuleContext(GlycanParser.DerivContext,0)


        def con(self):
            return self.getTypedRuleContext(GlycanParser.ConContext,0)


        def branch(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GlycanParser.BranchContext)
            else:
                return self.getTypedRuleContext(GlycanParser.BranchContext,i)


        def LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(GlycanParser.LBRACE)
            else:
                return self.getToken(GlycanParser.LBRACE, i)

        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(GlycanParser.RBRACE)
            else:
                return self.getToken(GlycanParser.RBRACE, i)

        def getRuleIndex(self):
            return GlycanParser.RULE_branch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBranch" ):
                listener.enterBranch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBranch" ):
                listener.exitBranch(self)




    def branch(self):

        localctx = GlycanParser.BranchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_branch)
        try:
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.deriv()
                self.state = 57
                self.con()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.deriv()
                self.state = 60
                self.con()
                self.state = 61
                self.branch()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 63
                self.match(GlycanParser.LBRACE)
                self.state = 64
                self.branch()
                self.state = 65
                self.match(GlycanParser.RBRACE)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 67
                self.deriv()
                self.state = 68
                self.con()
                self.state = 69
                self.match(GlycanParser.LBRACE)
                self.state = 70
                self.branch()
                self.state = 71
                self.match(GlycanParser.RBRACE)
                self.state = 72
                self.branch()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 74
                self.deriv()
                self.state = 75
                self.con()
                self.state = 76
                self.match(GlycanParser.LBRACE)
                self.state = 77
                self.branch()
                self.state = 78
                self.match(GlycanParser.RBRACE)
                self.state = 79
                self.match(GlycanParser.LBRACE)
                self.state = 80
                self.branch()
                self.state = 81
                self.match(GlycanParser.RBRACE)
                self.state = 82
                self.branch()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 84
                self.deriv()
                self.state = 85
                self.con()
                self.state = 86
                self.match(GlycanParser.LBRACE)
                self.state = 87
                self.branch()
                self.state = 88
                self.match(GlycanParser.RBRACE)
                self.state = 89
                self.match(GlycanParser.LBRACE)
                self.state = 90
                self.branch()
                self.state = 91
                self.match(GlycanParser.RBRACE)
                self.state = 92
                self.match(GlycanParser.LBRACE)
                self.state = 93
                self.branch()
                self.state = 94
                self.match(GlycanParser.RBRACE)
                self.state = 95
                self.branch()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DerivContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modi(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GlycanParser.ModiContext)
            else:
                return self.getTypedRuleContext(GlycanParser.ModiContext,i)


        def saci(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GlycanParser.SaciContext)
            else:
                return self.getTypedRuleContext(GlycanParser.SaciContext,i)


        def RING(self):
            return self.getToken(GlycanParser.RING, 0)

        def TYPE(self):
            return self.getToken(GlycanParser.TYPE, 0)

        def getRuleIndex(self):
            return GlycanParser.RULE_deriv

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeriv" ):
                listener.enterDeriv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeriv" ):
                listener.exitDeriv(self)




    def deriv(self):

        localctx = GlycanParser.DerivContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_deriv)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 99
                    self.modi() 
                self.state = 104
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 106 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 105
                    self.saci()

                else:
                    raise NoViableAltException(self)
                self.state = 108 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 113
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 110
                    self.modi() 
                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 116
                self.match(GlycanParser.RING)


            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 339440) != 0):
                self.state = 119
                self.modi()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 125
                self.match(GlycanParser.TYPE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SaciContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COUNT(self):
            return self.getToken(GlycanParser.COUNT, 0)

        def SAC(self):
            return self.getToken(GlycanParser.SAC, 0)

        def getRuleIndex(self):
            return GlycanParser.RULE_saci

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSaci" ):
                listener.enterSaci(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSaci" ):
                listener.exitSaci(self)




    def saci(self):

        localctx = GlycanParser.SaciContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_saci)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            _la = self._input.LA(1)
            if not(_la==3 or _la==13):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAR(self):
            return self.getToken(GlycanParser.LPAR, 0)

        def typi(self):
            return self.getTypedRuleContext(GlycanParser.TypiContext,0)


        def NUM(self):
            return self.getToken(GlycanParser.NUM, 0)

        def DASH(self):
            return self.getToken(GlycanParser.DASH, 0)

        def qnum(self):
            return self.getTypedRuleContext(GlycanParser.QnumContext,0)


        def RPAR(self):
            return self.getToken(GlycanParser.RPAR, 0)

        def getRuleIndex(self):
            return GlycanParser.RULE_con

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCon" ):
                listener.enterCon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCon" ):
                listener.exitCon(self)




    def con(self):

        localctx = GlycanParser.ConContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_con)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.match(GlycanParser.LPAR)
                self.state = 131
                self.typi()
                self.state = 132
                self.match(GlycanParser.NUM)
                self.state = 133
                self.match(GlycanParser.DASH)
                self.state = 134
                self.qnum()
                self.state = 135
                self.match(GlycanParser.RPAR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.match(GlycanParser.LPAR)
                self.state = 138
                self.match(GlycanParser.NUM)
                self.state = 139
                self.match(GlycanParser.DASH)
                self.state = 140
                self.qnum()
                self.state = 141
                self.match(GlycanParser.RPAR)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.typi()
                self.state = 144
                self.match(GlycanParser.NUM)
                self.state = 145
                self.match(GlycanParser.DASH)
                self.state = 146
                self.qnum()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 148
                self.typi()
                self.state = 149
                self.match(GlycanParser.NUM)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(GlycanParser.EQ, 0)

        def LBRACK(self):
            return self.getToken(GlycanParser.LBRACK, 0)

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(GlycanParser.NUM)
            else:
                return self.getToken(GlycanParser.NUM, i)

        def RBRACK(self):
            return self.getToken(GlycanParser.RBRACK, 0)

        def ct(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GlycanParser.CtContext)
            else:
                return self.getTypedRuleContext(GlycanParser.CtContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(GlycanParser.COLON)
            else:
                return self.getToken(GlycanParser.COLON, i)

        def C(self):
            return self.getToken(GlycanParser.C, 0)

        def getRuleIndex(self):
            return GlycanParser.RULE_add

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd" ):
                listener.enterAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd" ):
                listener.exitAdd(self)




    def add(self):

        localctx = GlycanParser.AddContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_add)
        self._la = 0 # Token type
        try:
            self.state = 181
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.match(GlycanParser.EQ)
                self.state = 154
                self.match(GlycanParser.LBRACK)
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==27 or _la==30:
                    self.state = 155
                    self.ct()


                self.state = 158
                self.match(GlycanParser.NUM)
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==17:
                    self.state = 159
                    self.match(GlycanParser.COLON)
                    self.state = 161
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==27 or _la==30:
                        self.state = 160
                        self.ct()


                    self.state = 163
                    self.match(GlycanParser.NUM)
                    self.state = 168
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 169
                self.match(GlycanParser.RBRACK)
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.match(GlycanParser.C)
                self.state = 171
                self.match(GlycanParser.LBRACK)
                self.state = 172
                self.match(GlycanParser.NUM)
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==17:
                    self.state = 173
                    self.match(GlycanParser.COLON)
                    self.state = 174
                    self.match(GlycanParser.NUM)
                    self.state = 179
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 180
                self.match(GlycanParser.RBRACK)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FgiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COUNT(self):
            return self.getToken(GlycanParser.COUNT, 0)

        def bridge(self):
            return self.getTypedRuleContext(GlycanParser.BridgeContext,0)


        def FG(self):
            return self.getToken(GlycanParser.FG, 0)

        def getRuleIndex(self):
            return GlycanParser.RULE_fgi

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFgi" ):
                listener.enterFgi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFgi" ):
                listener.exitFgi(self)




    def fgi(self):

        localctx = GlycanParser.FgiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_fgi)
        try:
            self.state = 186
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.match(GlycanParser.COUNT)
                pass
            elif token in [4, 5, 6, 7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.bridge()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 185
                self.match(GlycanParser.FG)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CarbContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CARBON(self):
            return self.getToken(GlycanParser.CARBON, 0)

        def NUM(self):
            return self.getToken(GlycanParser.NUM, 0)

        def add(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GlycanParser.AddContext)
            else:
                return self.getTypedRuleContext(GlycanParser.AddContext,i)


        def AI(self):
            return self.getToken(GlycanParser.AI, 0)

        def A(self):
            return self.getToken(GlycanParser.A, 0)

        def I(self):
            return self.getToken(GlycanParser.I, 0)

        def getRuleIndex(self):
            return GlycanParser.RULE_carb

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCarb" ):
                listener.enterCarb(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCarb" ):
                listener.exitCarb(self)




    def carb(self):

        localctx = GlycanParser.CarbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_carb)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4395630592) != 0):
                self.state = 188
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4395630592) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 191
            self.match(GlycanParser.CARBON)
            self.state = 192
            self.match(GlycanParser.NUM)
            self.state = 196
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==27 or _la==31:
                self.state = 193
                self.add()
                self.state = 198
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(GlycanParser.NUM)
            else:
                return self.getToken(GlycanParser.NUM, i)

        def DASH(self, i:int=None):
            if i is None:
                return self.getTokens(GlycanParser.DASH)
            else:
                return self.getToken(GlycanParser.DASH, i)

        def ANHYDRO(self):
            return self.getToken(GlycanParser.ANHYDRO, 0)

        def COLON(self):
            return self.getToken(GlycanParser.COLON, 0)

        def bridge(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GlycanParser.BridgeContext)
            else:
                return self.getTypedRuleContext(GlycanParser.BridgeContext,i)


        def fgi(self):
            return self.getTypedRuleContext(GlycanParser.FgiContext,0)


        def D(self):
            return self.getToken(GlycanParser.D, 0)

        def E(self):
            return self.getToken(GlycanParser.E, 0)

        def carb(self):
            return self.getTypedRuleContext(GlycanParser.CarbContext,0)


        def HEAD(self):
            return self.getToken(GlycanParser.HEAD, 0)

        def HEADD(self):
            return self.getToken(GlycanParser.HEADD, 0)

        def END(self):
            return self.getToken(GlycanParser.END, 0)

        def getRuleIndex(self):
            return GlycanParser.RULE_modi

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModi" ):
                listener.enterModi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModi" ):
                listener.exitModi(self)




    def modi(self):

        localctx = GlycanParser.ModiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_modi)
        self._la = 0 # Token type
        try:
            self.state = 242
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,24,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 201
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
                if la_ == 1:
                    self.state = 199
                    self.match(GlycanParser.NUM)
                    self.state = 200
                    self.match(GlycanParser.COLON)


                self.state = 203
                self.match(GlycanParser.NUM)
                self.state = 204
                self.match(GlycanParser.DASH)
                self.state = 205
                self.match(GlycanParser.ANHYDRO)
                self.state = 206
                self.match(GlycanParser.DASH)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 207
                self.match(GlycanParser.NUM)
                self.state = 208
                self.match(GlycanParser.DASH)
                self.state = 209
                self.bridge()
                self.state = 210
                self.match(GlycanParser.DASH)
                self.state = 211
                self.fgi()
                self.state = 212
                self.match(GlycanParser.DASH)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 215
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==18:
                    self.state = 214
                    self.match(GlycanParser.DASH)


                self.state = 218
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==16:
                    self.state = 217
                    self.match(GlycanParser.NUM)


                self.state = 223
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,21,self._ctx)
